# TalentPlatform-Fortran

./: CMakeLists.txt  README.md  fort.6  main.f90
src/: subFacto.f90
tmp/: CallFortranInR_20210610.f90  facto.f90
